# calendar_fullstack

./: .gitignore  LICENSE  README.md
back/: docker-compose.yaml  pyproject.toml
back/back/: main.py
back/back/calendar/: get_services.py  route.py
back/back/functions/: calendar.py  date_time_util.py  scheduler.py
back/back/responses/: json_response.py
back/back/schemas/: schemas.py
front/: .gitignore  package-lock.json  package.json
front/public/: index.html
front/src/: App.js  index.js
