[tool.poetry]
name = "back"
version = "0.1.0"
description = ""
authors = ["Alejandro Amar <alejandroamar66@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^8.3.0"
fastapi = {extras = ["standard"], version = "^0.101.1"}
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.20"
psycopg2-binary = "^2.9.7"
pydantic = {extras = ["email"], version = "^2.3.0"}
google-api-python-client = "^2.97.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.0.0"
python-dateutil = "^2.8.2"
tzlocal = "^5.0.1"
apscheduler = "^3.10.4"
redis = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
